<resources>
    <string name="app_name">SHADE</string>

    <string name="logo_name">shade</string>
    <string name="drawer_open">open drawer</string>
    <string name="drawer_close">close drawer</string>

    <string-array name="drawer">
        <item>Settings</item>
        <item>Chat with Us</item>
        <item>Help Articles</item>
        <item>Legal Information</item>
        <item>Change Password</item>
        <item>Sign Out</item>
    </string-array>

    <array name="drawerIcons">
        <item>@drawable/icon_settings</item>
        <item>@drawable/icon_chat</item>
        <item>@drawable/icon_help</item>
        <item>@drawable/icon_info</item>
        <item>@drawable/icon_lock</item>
        <item>@drawable/icon_acct</item>
    </array>

    <string-array name="legalInfo">
        <item>Terms of Service</item>
        <item>Privacy Policy</item>
        <item>Safety Instructions</item>
        <item>Returns &amp; Warranty</item>
        <item>Terms of Sale</item>
        <item>Copyright Policy</item>
        <item>Conflict of Interest Policy</item>
    </string-array>
    <string-array name="legalInfoLink">
        <item>https://dev.wearshade.com/terms_and_conditions</item>
        <item>https://dev.wearshade.com/privacy_policy</item>
        <item>https://dev.wearshade.com/safety_instructions</item>
        <item>https://dev.wearshade.com/device_warranty</item>
        <item>https://dev.wearshade.com/terms_of_sale</item>
        <item>https://dev.wearshade.com/copyright_policy</item>
        <item>https://dev.wearshade.com/conflict_of_interest</item>
    </string-array>

    <!-- Font -->
    <string name="roboto_light">fonts/Roboto-Light.ttf</string>
    <string name="roboto_bold">fonts/Roboto-Bold.ttf</string>
    <string name="roboto_medium">fonts/Roboto-Medium.ttf</string>
    <string name="roboto_regular">fonts/Roboto-Regular.ttf</string>
    <!-- End of Font -->

    <!-- Splash Screen-->
    <string name="splash_bottom_title">You need a Shade sensor to use this app.\nDon\'t have one? Tap here.</string>
    <string name="splash_btn_signUp">SIGN UP</string>
    <string name="splash_btn_signIn">SIGN IN</string>

    <!-- Splash Screen-->
    <string name="signIn_edt_hint_email">Email</string>
    <string name="signIn_edt_hint_password">Password</string>
    <string name="signIn_txt_forgotPassword">Forgot password?</string>
    <string name="signIn_txt_email_support">Email Customer Support</string>
    <string name="signIn_txt_or">or</string>
    <string name="signIn_txt_all_support">Call Us</string>

    <!-- Sign Up Screen-->
    <string name="signUp_terms_cnd">By creating an account, you agree to the Terms of Service.</string>

    <!-- Splash Screen-->
    <string name="forgotPsw_txt">We\'ll email you a link with instructions to reset your password. Please enter the email you use to sign in.</string>
    <string name="forgotPsw_btn">SUBMIT</string>
    <string name="forgotPsw_title">Reset Password</string>

    <!-- Fragment Dashboard Screen-->
    <string name="frag_dashboard_uvIndex_title">UV Index</string>
    <string name="frag_dashboard_Realtime_Measurement">Realtime Measurement</string>
    <string name="frag_dashboard_view_history_btn">VIEW HISTORY</string>
    <string name="frag_dashboard_view_history_dsc">You can now adjust your daily limit\nfor UV exposure from History.</string>
    <string name="frag_dashboard_reached">YOU HAVE REACHED</string>
    <string name="frag_dashboard_off_limit">OF YOUR DAILY LIMIT</string>
    <string name="frag_dashboard_sensor_notdetecting">Your sensor is not detecting\nany UV right now.</string>
    <string name="frag_dashboard_bluetooth_off">Looks like your phone’s Bluetooth is \nturned off. Enable it to connect to your \nsensor. Need Help? Chat with us.</string>
    <string name="frag_dashboard_sensor_troubleDetecting">Trouble detecting your sensor. Please \nmake sure it is near your phone and \ncharged. Need Help? Chat with us.</string>
    <string name="frag_dashboard_sensor_pair_sensordsc">Get started by pairing your Shade sensor \nwith the app.</string>
    <string name="frag_dashboard_sensor_pair_sensor_btn">PAIR SENSOR</string>
    <string name="frag_dashboard_sensor_wearShade">Wear Shade for at least one week \nbefore setting your Daily Limit for UV \nexposure. Once set, you will see \ninformation about your Daily Limit here.</string>
    <string name="frag_dashboard_sensor_OverDailyLimit">Over Daily Limit</string>
    <string name="frag_dashboard_sensor_morethenhr">More than 4 hours</string>
    <string name="frag_dashboard_sensor_atcurrentuvindex">LEFT AT CURRENT UV INDEX</string>
    <string name="frag_dashboard_sensor_todayExpo">Today\'s  Exposure</string>
    <string name="frag_dashboard_sensor_Accumulated">Accumulated so far: 52 UV Units</string>
    <string name="frag_dashboard_spf_ADDSPF">ADD SPF</string>
    <string name="frag_dashboard_spf_SUNSCREENCOUNTDOWN">SUNSCREEN COUNTDOWN</string>

    <!-- Fragment History Screen-->
    <string name="frag_history_UVExposure">UV Exposure</string>
    <string name="frag_history_DailyLimit">Daily Limit: 25 UV Units</string>
    <string name="frag_history_CheckIn">Check In</string>
    <string name="frag_history_TotalDays">Total Days of Exposure</string>
    <string name="frag_history_AvgDays">Average Daily Exposure</string>
    <string name="frag_history_YDailyLimit">Your Daily Limit</string>
    <string name="frag_history_YHighUV">Your High UV Value</string>
    <string name="frag_history_AvgCheckIn">Average Check In</string>
    <string name="frag_history_AllData">See All Data</string>

    <!-- Fragment CheckIn Screen-->
    <string name="frag_checkIn_feelingToday">How are you feeling today?</string>
    <string name="frag_checkIn_edtFeelingHint">Anything bothering you today? Tap to type…</string>
    <string name="frag_checkIn_edtFeelingHintSuge">Edit as many times as you need to until midnight.</string>

    <!-- Dialog Text -->

    <string name="dialog_message_exit">Are you sure you want to cancel\n your sunscreen application?</string>
    <string name="dialog_pButton_Yes">YES</string>
    <string name="dialog_nButton_No">NO</string>
    <string name="dialog_logout">Are you sure, you want to logout \nfrom this app?</string>

    <!-- ResetPassword -->
    <string name="changePassword_title">Change Password</string>
    <string name="resetPassword_edt_hint_oldpassword">Current Password</string>
    <string name="resetPassword_edt_hint_newpassword">New Password</string>

    <!-- ResetPassword -->
    <string name="settings_title">Setting</string>
    <string name="settings_pair_title">Pair Sensor</string>
    <string name="settings_pair_desc">You need to pair your sensor only once.</string>
    <string name="settings_softwareUpdate_title">Sensor Software Update</string>
    <string name="settings_softwareUpdate_desc">Sensor Software version 1.4.3 is up to date. </string>
    <string name="settings_sensorCoveredNotification_title">Sensor Covered Notification</string>
    <string name="settings_sensorCoveredNotification_desc">You may disable your sensor from vibrating when it is covered. Vibration is automatically re-enabled at midnight.</string>
    <string name="settings_MorningReminder_title">Morning Reminder</string>
    <string name="settings_MorningReminder_desc">6:30 AM</string>
    <string name="settings_EveningReminder_title">Evening Reminder</string>
    <string name="settings_EveningReminder_desc">Reminder to check in nightly.</string>

    <!-- All Data -->
    <string name="allData_title">All Data</string>

</resources>
