<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shade="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <com.shades.shade.widgets.ShadeTextView
        android:id="@+id/frg_txt_viewHistoryDsc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/frag_dashboard_view_history_dsc"
        android:textColor="@color/textColor"
        android:textSize="@dimen/sp_mediumx"
        shade:customFont="@string/roboto_regular" />

    <com.shades.shade.widgets.ShadeTextView
        android:id="@+id/frg_txt_viewHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/dp_ten"
        android:background="@drawable/button_fill_small_coral"
        android:singleLine="true"
        android:text="@string/frag_dashboard_view_history_btn"
        android:textColor="@color/md_white_1000"
        android:textSize="@dimen/sp_medium"
        shade:customFont="@string/roboto_medium" />

</LinearLayout>