<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:shade="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <ImageView
        android:id="@+id/splash_txt_logoName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/dp_eighty"
        android:scaleType="centerInside"
        android:src="@drawable/shade_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/splash_txt_bottomTitle"
        android:layout_marginBottom="@dimen/dp_fifteen"
        android:gravity="center"
        android:orientation="horizontal">

        <com.shades.shade.widgets.ShadeTextView
            android:id="@+id/splash_btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_fifteen"
            android:background="@drawable/button_outline_small"
            android:gravity="center"
            android:text="@string/splash_btn_signUp"
            android:textColor="@color/textColor_A"
            android:textSize="@dimen/sp_mediumx"
            shade:customFont="@string/roboto_medium" />

        <RelativeLayout
            android:layout_width="@dimen/dp_ten"
            android:layout_height="wrap_content" />

        <com.shades.shade.widgets.ShadeTextView
            android:id="@+id/splash_btn_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dp_fifteen"
            android:background="@drawable/button_fill_small"
            android:gravity="center"
            android:text="@string/splash_btn_signIn"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/sp_mediumx"
            shade:customFont="@string/roboto_medium" />

    </LinearLayout>

    <com.shades.shade.widgets.ShadeTextView
        android:id="@+id/splash_txt_bottomTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_fifteen"
        android:gravity="center"
        android:text="@string/splash_bottom_title"
        android:textColor="@color/highlightedColor"
        android:textSize="@dimen/sp_smallxx"
        shade:customFont="@string/roboto_bold" />
</RelativeLayout>
