<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shade="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_white_1000">

    <RelativeLayout
        android:id="@+id/include_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <include
            layout="@layout/include_topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/include_topbar"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_twenttfive"
            android:orientation="vertical"
            android:paddingLeft="@dimen/dp_eight"
            android:paddingRight="@dimen/dp_eight">

            <com.shades.shade.widgets.ShadeEditText
                android:id="@+id/signUp_edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/signIn_edt_hint_email"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor_hint"
                android:theme="@style/EditTextStyle"
                shade:customFont="@string/roboto_regular" />

            <com.shades.shade.widgets.ShadeTextView
                android:id="@+id/signUp_error_email_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="left"
                android:paddingLeft="@dimen/dp_two"
                android:paddingTop="-2dp"
                android:text="@string/signIn_txt_forgotPassword"
                android:textColor="@color/highlightedColor"
                android:textSize="@dimen/sp_smallxx"
                android:visibility="invisible"
                shade:customFont="@string/roboto_regular" />

            <com.shades.shade.widgets.ShadeEditText
                android:id="@+id/signUp_edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableRight="@drawable/pw_visible"
                android:hint="@string/signIn_edt_hint_password"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/textColor"
                android:textColorHint="@color/textColor_hint"
                android:theme="@style/EditTextStyle"
                shade:customFont="@string/roboto_regular" />

            <com.shades.shade.widgets.ShadeTextView
                android:id="@+id/signUp_error_password_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="left"
                android:paddingLeft="@dimen/dp_two"
                android:paddingTop="-2dp"
                android:text="@string/signIn_txt_forgotPassword"
                android:textColor="@color/highlightedColor"
                android:textSize="@dimen/sp_smallxx"
                android:visibility="invisible"
                shade:customFont="@string/roboto_regular" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_eight"
            android:layout_marginRight="@dimen/dp_eight"
            android:layout_marginTop="@dimen/dp_twenttfive"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/signUp_img_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/selector_signup_term" />

            <com.shades.shade.widgets.ShadeTextView
                android:id="@+id/signUp_txt_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="@dimen/dp_two"
                android:text="@string/signUp_terms_cnd"
                android:textColor="@color/textColor"
                android:textSize="@dimen/sp_smallx"
                shade:customFont="@string/roboto_regular" />

        </LinearLayout>

        <com.shades.shade.widgets.ShadeTextView
            android:id="@+id/signUp_btn_signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_fifteen"
            android:background="@drawable/selector_signup_btn"
            android:gravity="center"
            android:text="@string/splash_btn_signUp"
            android:textColor="@color/md_white_1000"
            android:textSize="@dimen/sp_mediumx"
            shade:customFont="@string/roboto_medium" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_fifteen"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <com.shades.shade.widgets.ShadeTextView
            android:id="@+id/signUp_btn_emailSup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signIn_txt_email_support"
            android:textColor="@color/highlightedColor"
            android:textSize="@dimen/sp_smallxx"
            shade:customFont="@string/roboto_bold" />

        <com.shades.shade.widgets.ShadeTextView
            android:id="@+id/signUp_btn_callSup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_two"
            android:layout_marginRight="@dimen/dp_two"
            android:gravity="center"
            android:text="@string/signIn_txt_or"
            android:textColor="@color/textColor_signin_tiitle"
            android:textSize="@dimen/sp_smallxx"
            shade:customFont="@string/roboto_bold" />

        <com.shades.shade.widgets.ShadeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signIn_txt_all_support"
            android:textColor="@color/highlightedColor"
            android:textSize="@dimen/sp_smallxx"
            shade:customFont="@string/roboto_bold" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_five"
        android:layout_below="@+id/include_topbar"
        android:background="@drawable/dropshadow" />


</RelativeLayout>
