<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:shade="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <com.shades.shade.widgets.ShadeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frag_dashboard_sensor_morethenhr"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp_largexv"
            shade:customFont="@string/roboto_light" />

        <com.shades.shade.widgets.ShadeTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/frag_dashboard_sensor_atcurrentuvindex"
            android:textColor="@color/textColor"
            android:textSize="@dimen/sp_mediumx"
            shade:customFont="@string/roboto_light" />

    </LinearLayout>

    <ImageView
        android:id="@+id/img_rightArrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:paddingBottom="@dimen/dp_ten"
        android:paddingRight="@dimen/dp_ten"
        android:paddingTop="@dimen/dp_ten"
        android:src="@drawable/chevron_left" />
</RelativeLayout>